--- a/miniGPT.ipynb
+++ b/miniGPT.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.39288067817688\n"
+      "2.4699912071228027\n"
      ]
     }
    ],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -432,21 +432,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ANGO:\n",
-      "He rthathine!\n",
-      "CEShew s serer Fofow.\n",
-      "Houspathe t:\n",
-      "Mind fit.\n",
-      "DUKINoceamy hun.\n",
-      "CKI:\n",
-      "Norst onre t ache bar, simed?\n",
-      "And me theluse Bel arind-g'sto f w m CK:\n",
-      "YCESI fatass mbre lious ave\n",
-      "Wer'dor' wod y:\n",
+      "Iyoteng h hasbe pave pirance\n",
+      "Rie hicomyonthar's\n",
+      "Plinseard ith henouratucenonthioneir thondy, y heltieiengerofo'dsssit ey\n",
+      "KIN d pe wither vouprrouthercc.\n",
+      "hathe; d!\n",
+      "My hind tt hinig t ouchos tes; st yo hind wotte grotonear 'so it t jod weancotha:\n",
+      "h haybet--s n prids, r loncave w hollular s O:\n",
+      "HIs; ht anjx?\n",
       "\n",
-      "Henkns ges wise we me y to elil'doug p in t her spalisusin t wndalu?Y ber lishms vekeang-lumod n odas ine a! thayayor hannd t; frat.\n",
-      "OLArZAUSum,\n",
-      "s I f pin hondecharvyouk p IVIImere we keicet gs llly ideerid t com: chavily; o fill we mes co it hitodntly d d wsue ater to ovithA herisch ave une, t e\n"
+      "DUThinqunt.\n",
+      "\n",
+      "LaZAnde.\n",
+      "athave l.\n",
+      "KEONH:\n",
+      "ARThanco be y,-hedarwnoddy scat t tridesar, wnl'shenous s ls, theresseys\n",
+      "PlorseelapinghiybHen yof GLUCEN the. sE:\n",
+      "I hisgothers je are! ABer wotouciullle'z\n"
      ]
     }
    ],
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +475,7 @@
        "torch.Size([4, 8, 2])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,56 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "# we want x[b, t] = mean_{i<=t} x[b, i]\n",
-    "wei = torch.tril(torch.ones(T, T))\n",
-    "wei = wei / torch.sum(wei, axis=1, keepdim=True)\n",
-    "xbow2 = wei @ x         # (B, T, T) @ (B, T, C) -----> (B, T, C)\n",
-    "\n",
-    "print(torch.allclose(xbow, xbow2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.1808, -0.0700],\n",
-       "        [-0.3596, -0.9152],\n",
-       "        [ 0.6258,  0.0255],\n",
-       "        [ 0.9545,  0.0643],\n",
-       "        [ 0.3612,  1.1679],\n",
-       "        [-1.3499, -0.5102],\n",
-       "        [ 0.2360, -0.2398],\n",
-       "        [-0.9211,  1.5433]])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +521,7 @@
        "        [-0.0341,  0.1332]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,16 +532,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we want x[b, t] = mean_{i<=t} x[b, i]\n",
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / torch.sum(wei, axis=1, keepdim=True)\n",
+    "xbow2 = wei @ x         # (B, T, T) @ (B, T, C) -----> (B, T, C)\n",
+    "\n",
+    "print(torch.allclose(xbow, xbow2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.3596, -0.9152],\n",
+       "        [ 0.6258,  0.0255],\n",
+       "        [ 0.9545,  0.0643],\n",
+       "        [ 0.3612,  1.1679],\n",
+       "        [-1.3499, -0.5102],\n",
+       "        [ 0.2360, -0.2398],\n",
+       "        [-0.9211,  1.5433]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,6 +656,200 @@
     "wei = F.softmax(wei, dim=-1)\n",
     "xbow3 = wei @ x\n",
     "torch.allclose(xbow, xbow3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 16])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# version 4: self-attention\n",
+    "torch.manual_seed(1337)\n",
+    "B, T, C = 4, 8, 32      # batch, time, channels\n",
+    "x = torch.randn(B, T, C)\n",
+    "\n",
+    "# see a single Head perform self-attention\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)\n",
+    "query = nn.Linear(C, head_size, bias=False)\n",
+    "value = nn.Linear(C, head_size, bias=False)\n",
+    "k = key(x)      # (B, T, 16)\n",
+    "q = query(x)    # (B, T, 16)\n",
+    "wei = q @ k.transpose(-2, -1)   # (B, T, 16) @ (B, 16, T) -----> (B, T, T)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = wei.masked_fill(tril==0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v \n",
+    "# out = wei @ x\n",
+    "\n",
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1574, 0.8426, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2088, 0.1646, 0.6266, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5792, 0.1187, 0.1889, 0.1131, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0294, 0.1052, 0.0469, 0.0276, 0.7909, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0176, 0.2689, 0.0215, 0.0089, 0.6812, 0.0019, 0.0000, 0.0000],\n",
+       "        [0.1691, 0.4066, 0.0438, 0.0416, 0.1048, 0.2012, 0.0329, 0.0000],\n",
+       "        [0.0210, 0.0843, 0.0555, 0.2297, 0.0573, 0.0709, 0.2423, 0.2391]],\n",
+       "       grad_fn=<SelectBackward0>)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "\n",
+    "* Attention is just a communication mechanism. \n",
+    "* Tokens processed in different batches don't talk to each other. \n",
+    "* self-attention: keys, values, queries all come from x. \n",
+    "* there's also cross-attention and general attention\n",
+    "* scaled attention --> control the variance at initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = torch.randn(B, T, head_size)\n",
+    "q = torch.randn(B, T, head_size)\n",
+    "wei = q @ k.transpose(-2, -1) * head_size ** -0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0449)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0700)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.0918)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei.var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1925, 0.1426, 0.2351, 0.1426, 0.2872])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0326, 0.0030, 0.1615, 0.0030, 0.8000])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5])*8, dim=-1)"
    ]
   },
   {
